# zk-hash

./: .gitignore  README.md  go.mod  go.sum
keccak/: keccak256.go  keccak256_bits.go  keccak256_bits_optimized.go  keccak256_bits_test.go  pad.go  pad_test.go
keccak/keccakf/: keccakf_old.go
poseidon/: poseidon_bn254_circuit.go
poseidon/circuit/: circuit.go  circuit_test.go  constant_test.go  constants.go
poseidon/test/: poseidon_bn254_test.go
poseidon2_goldilock/: Makefile  README.md  poseidon2_goldilock.go
poseidon2_goldilock/p3_poseidon2_golidlock_lib/: Cargo.toml
poseidon2_goldilock/p3_poseidon2_golidlock_lib/src/: lib.rs
poseidon2_goldilock/test/: poseidon2_goldilock_test.go
utils/: binary.go  poseidon_bn254.go  slice.go
