[package]
name = "p3_poseidon2_golidlock_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
p3-goldilocks = "0.1.0"
p3-poseidon2 = "0.1.0"
p3-field = "0.1.0"
p3-symmetric = "0.1.0"

[lib]
crate-type = ["cdylib"]
